# xds_webapp

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: README.md  main.py  pyproject.toml
backend/xds/: __init__.py  environment.py  integrate.py  parameters.py  plot_models.py  quanty_analysis.py  quanty_runner.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  DavidiaPlots.tsx  HoverPanel.css  HoverPanel.tsx  NumberRangeSelector.css  NumberRangeSelector.tsx  NumberSelector.css  NumberSelector.tsx  index.css
frontend/src/measurement/: FormComponent.tsx  NumberRangeSelector.tsx  handleSubmit.tsx  pathSelector.tsx
frontend/src/sim/: FormComponent.css  FormComponent.tsx  IonSelect.tsx  NumericInput.tsx  PeriodicTable.css  SymmetrySelect.tsx  TextInput.tsx  VectorInput.tsx  element_selector.tsx  elements.tsx  formParameters.tsx  handleSubmit.tsx  optionSelector.tsx  quanty_selector.tsx  symmetry_selector.tsx  validateForm.tsx
